--- a/pbYelp.ipynb
+++ b/pbYelp.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -35,7 +35,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "city = 'Seattle'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "params = {\n",
+    "    'term': 'restaurants',\n",
+    "}\n",
+    "# r = result (from search)\n",
+    "r = client.search(city, **params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -43,16 +69,121 @@
     {
      "data": {
       "text/plain": [
-       "<yelp.oauth1_authenticator.Oauth1Authenticator at 0x7f009c13c2d0>"
+       "6948"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "auth"
+    "r.total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "from sqlalchemy import create_engine\n",
+    "engine = create_engine('postgresql://postgres:password@localhost/yelp_restaurant', echo = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from sqlalchemy.orm import sessionmaker\n",
+    "Session = sessionmaker(bind = engine)\n",
+    "session = Session()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from sqlalchemy.ext.declarative import declarative_base\n",
+    "from sqlalchemy import Column, ForeignKey, Integer, String, Float, Boolean\n",
+    "from sqlalchemy import Index\n",
+    "# use (e.g.) instrumentation.unregister_class(Search_Restaurant)\n",
+    "# to remove Table from metadata\n",
+    "from sqlalchemy.orm import relationship, backref, instrumentation\n",
+    "\n",
+    "Base = declarative_base()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "class Search(Base):\n",
+    "    __tablename__ = 'search'\n",
+    "    # search_id = city_state for city-based searches\n",
+    "    search_id = Column(String(250), index = True, primary_key = True)\n",
+    "    latitude_delta = Column(Float)\n",
+    "    longitude_delta = Column(Float)\n",
+    "    latitude = Column(Float)\n",
+    "    longitude = Column(Float)\n",
+    "    total = Column(Integer)\n",
+    "    restaurants = relationship('Restaurant', secondary = 'search_restaurant')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "class Restaurant(Base):\n",
+    "    __tablename__ = 'restaurant'\n",
+    "    restaurant_id = Column(String(250), index = True, primary_key = True)\n",
+    "    ages_allowed = Column(String(250))\n",
+    "    price_range = Column(Integer)\n",
+    "    searches = relationship('Search', secondary = 'search_restaurant')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "class Search_Restaurant(Base):\n",
+    "    __tablename__ = 'search_restaurant'\n",
+    "    search_id = Column(String(250), ForeignKey('search.search_id'), primary_key = True)\n",
+    "    restaurant_id = Column(String(250), ForeignKey('restaurant.restaurant_id'), primary_key = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "Base.metadata.create_all(engine)"
    ]
   },
   {
@@ -62,10 +193,29 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "search = Search(search_id=city, latitude_delta = r.latitude_delta, longitude_delta = r.longitude_delta, \n",
+    "                latitude = r.latitude, longitude = r.longitude, total = r.total)\n",
+    "session.add(search)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "restaurant = Restaurant(restaurant_id = 'ABC123', price_range = 1)\n",
+    "restaurant.searches.append(search)\n",
+    "session.add(restaurant)\n",
+    "session.commit()"
+   ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [conda root]",
    "language": "python",
