vanishing point updates

--- a/pbYelp.ipynb
+++ b/pbYelp.ipynb
@@ -163,91 +163,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2017-01-26 02:39:49,226 INFO sqlalchemy.engine.base.Engine select version()\n",
-      "2017-01-26 02:39:49,228 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2017-01-26 02:39:49,232 INFO sqlalchemy.engine.base.Engine select current_schema()\n",
-      "2017-01-26 02:39:49,234 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2017-01-26 02:39:49,238 INFO sqlalchemy.engine.base.Engine SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1\n",
-      "2017-01-26 02:39:49,239 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2017-01-26 02:39:49,242 INFO sqlalchemy.engine.base.Engine SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1\n",
-      "2017-01-26 02:39:49,244 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2017-01-26 02:39:49,247 INFO sqlalchemy.engine.base.Engine show standard_conforming_strings\n",
-      "2017-01-26 02:39:49,248 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2017-01-26 02:39:49,252 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2017-01-26 02:39:49,254 INFO sqlalchemy.engine.base.Engine {'name': u'search'}\n",
-      "2017-01-26 02:39:49,257 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2017-01-26 02:39:49,258 INFO sqlalchemy.engine.base.Engine {'name': u'search_restaurant'}\n",
-      "2017-01-26 02:39:49,261 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
-      "2017-01-26 02:39:49,262 INFO sqlalchemy.engine.base.Engine {'name': u'restaurant'}\n",
-      "2017-01-26 02:39:49,266 INFO sqlalchemy.engine.base.Engine \n",
-      "CREATE TABLE search (\n",
-      "\tsearch_id VARCHAR(250) NOT NULL, \n",
-      "\tlatitude_delta FLOAT, \n",
-      "\tlongitude_delta FLOAT, \n",
-      "\tlatitude FLOAT, \n",
-      "\tlongitude FLOAT, \n",
-      "\ttotal INTEGER, \n",
-      "\tPRIMARY KEY (search_id)\n",
-      ")\n",
-      "\n",
-      "\n",
-      "2017-01-26 02:39:49,267 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2017-01-26 02:39:49,323 INFO sqlalchemy.engine.base.Engine COMMIT\n",
-      "2017-01-26 02:39:49,346 INFO sqlalchemy.engine.base.Engine CREATE INDEX ix_search_search_id ON search (search_id)\n",
-      "2017-01-26 02:39:49,347 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2017-01-26 02:39:49,390 INFO sqlalchemy.engine.base.Engine COMMIT\n",
-      "2017-01-26 02:39:49,415 INFO sqlalchemy.engine.base.Engine \n",
-      "CREATE TABLE restaurant (\n",
-      "\trestaurant_id VARCHAR(250) NOT NULL, \n",
-      "\tis_claimed BOOLEAN, \n",
-      "\tis_closed BOOLEAN, \n",
-      "\tname VARCHAR(100), \n",
-      "\turl VARCHAR(2083), \n",
-      "\tmobile_url VARCHAR(2083), \n",
-      "\tphone VARCHAR(20), \n",
-      "\treview_count INTEGER, \n",
-      "\trating FLOAT, \n",
-      "\taddress VARCHAR(250), \n",
-      "\tcity VARCHAR(60), \n",
-      "\tlatitude FLOAT, \n",
-      "\tlongitude FLOAT, \n",
-      "\tcountry_code VARCHAR(20), \n",
-      "\tcross_streets VARCHAR(250), \n",
-      "\tdisplay_address VARCHAR(250), \n",
-      "\tfull_address VARCHAR(250), \n",
-      "\tgeo_accuracy FLOAT, \n",
-      "\tneighborhoods VARCHAR(500), \n",
-      "\tpostal_code VARCHAR(20), \n",
-      "\tstate_code VARCHAR(20), \n",
-      "\tmenu_provider VARCHAR(250), \n",
-      "\t\"imLat\" FLOAT, \n",
-      "\t\"imLong\" FLOAT, \n",
-      "\t\"imFov\" INTEGER, \n",
-      "\t\"imPitch\" INTEGER, \n",
-      "\t\"imSize\" VARCHAR(250), \n",
-      "\t\"imName\" VARCHAR(250), \n",
-      "\tpano_id VARCHAR(250), \n",
-      "\tPRIMARY KEY (restaurant_id)\n",
-      ")\n",
-      "\n",
-      "\n",
-      "2017-01-26 02:39:49,416 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2017-01-26 02:39:49,499 INFO sqlalchemy.engine.base.Engine COMMIT\n",
-      "2017-01-26 02:39:49,521 INFO sqlalchemy.engine.base.Engine CREATE INDEX ix_restaurant_restaurant_id ON restaurant (restaurant_id)\n",
-      "2017-01-26 02:39:49,522 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2017-01-26 02:39:49,558 INFO sqlalchemy.engine.base.Engine COMMIT\n",
-      "2017-01-26 02:39:49,580 INFO sqlalchemy.engine.base.Engine \n",
-      "CREATE TABLE search_restaurant (\n",
-      "\tsearch_id VARCHAR(250) NOT NULL, \n",
-      "\trestaurant_id VARCHAR(250) NOT NULL, \n",
-      "\tPRIMARY KEY (search_id, restaurant_id), \n",
-      "\tFOREIGN KEY(search_id) REFERENCES search (search_id), \n",
-      "\tFOREIGN KEY(restaurant_id) REFERENCES restaurant (restaurant_id)\n",
-      ")\n",
-      "\n",
-      "\n",
-      "2017-01-26 02:39:49,581 INFO sqlalchemy.engine.base.Engine {}\n",
-      "2017-01-26 02:39:49,617 INFO sqlalchemy.engine.base.Engine COMMIT\n"
+      "2017-01-31 03:10:18,936 INFO sqlalchemy.engine.base.Engine select version()\n",
+      "2017-01-31 03:10:18,937 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2017-01-31 03:10:18,967 INFO sqlalchemy.engine.base.Engine select current_schema()\n",
+      "2017-01-31 03:10:18,968 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2017-01-31 03:10:18,980 INFO sqlalchemy.engine.base.Engine SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1\n",
+      "2017-01-31 03:10:18,981 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2017-01-31 03:10:18,992 INFO sqlalchemy.engine.base.Engine SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1\n",
+      "2017-01-31 03:10:18,993 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2017-01-31 03:10:18,995 INFO sqlalchemy.engine.base.Engine show standard_conforming_strings\n",
+      "2017-01-31 03:10:18,995 INFO sqlalchemy.engine.base.Engine {}\n",
+      "2017-01-31 03:10:18,998 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
+      "2017-01-31 03:10:18,999 INFO sqlalchemy.engine.base.Engine {'name': u'search'}\n",
+      "2017-01-31 03:10:19,028 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
+      "2017-01-31 03:10:19,028 INFO sqlalchemy.engine.base.Engine {'name': u'search_restaurant'}\n",
+      "2017-01-31 03:10:19,030 INFO sqlalchemy.engine.base.Engine select relname from pg_class c join pg_namespace n on n.oid=c.relnamespace where pg_catalog.pg_table_is_visible(c.oid) and relname=%(name)s\n",
+      "2017-01-31 03:10:19,031 INFO sqlalchemy.engine.base.Engine {'name': u'restaurant'}\n"
      ]
     }
    ],
@@ -257,18 +188,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "searchCity = 'Tacoma'\n",
+    "searchCity = 'Norwood, NY'\n",
     "params = {\n",
     "    'term': 'restaurants',\n",
     "}\n",
     "# yResp = result from Yelp search\n",
     "yResp = client.search(searchCity, **params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a=[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "empty\n"
+     ]
+    }
+   ],
+   "source": [
+    "if len(a)!=0:\n",
+    "    print 'empty'"
    ]
   },
   {
